--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,6 @@ body.dark{background:#000}
 .final-message{color:#fff;font-size:clamp(1.1rem,2vw,1.5rem);text-align:center;opacity:0;animation:fadeIn 2s forwards;margin-top:8px;font-family:'Poppins',sans-serif}
 .trigguiletras{height:24px;opacity:.9;margin-top:6px;transition:opacity .4s}
 .hidden{display:none!important}
-.bg1{background:linear-gradient(135deg,#ff416c,#ff4b2b)}
-.bg2{background:linear-gradient(135deg,#00b09b,#96c93d)}
-.bg3{background:linear-gradient(135deg,#a18cd1,#fbc2eb)}
-.bg4{background:linear-gradient(135deg,#ff6a00,#ee0979)}
 @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
 @keyframes scaleFadeIn{to{transform:scale(1);opacity:1}}
 @keyframes aparecer{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
@@ -37,7 +33,6 @@ body.dark{background:#000}
 @keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.08)}}
 </style>
 </head>
-
 <body>
 <div class="main">
   <div class="header-message">¿Dónde está el libro físico? 📚</div>
@@ -51,57 +46,84 @@ body.dark{background:#000}
 </div>
 
 <script>
-const $=id=>document.getElementById(id),
-libros=[
-{palabras:["Adaptabilidad","Resiliencia","Mentalidad","Estrategia"],frases:["🌊 Aprende a moverte con flexibilidad.","🛡️ Construye fortaleza emocional.","🧠 Evoluciona tu mente constantemente.","📈 Aplica tácticas inteligentes hoy."],portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1642726660i/60171734.jpg",fondo:"#140038"},
-{palabras:["Duda","Replantea","Actualiza","Expande"],frases:["🔍 Convierte la duda en transformación.","🧭 Replantea certezas con preguntas.","♻️ Actualiza mapas mentales.","🚀 Derriba prejuicios y expande."],portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1602574232i/55539565.jpg",fondo:"#001a33"},
-{palabras:["Construcción","Innovación","Acción","Empoderamiento"],frases:["🏗️ Lleva ideas a acción real.","🎨 Crea realidades inspiradoras.","🚶‍♂️ Empieza ahora, ajusta después.","🌟 Recupera el control personal."],portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1662270336i/62237986.jpg",fondo:"#33001a"},
-{palabras:["Disciplina","Excelencia","Ambición","Liderazgo"],frases:["🏹 Domina consistencia diaria.","👑 Persigue excelencia silenciosa.","🚀 Deja que tu ambición crezca.","🧭 Lidera con autenticidad."],portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1546097703i/76865.jpg",fondo:"#003300"}
-];
-let libroActual,bloquePortada,revelado=false,count=345;
+const $ = id => document.getElementById(id);
+let libroActual, bloquePortada, revelado = false, count = 0;
 
-function iniciarJuego(){
-  const grid=$("gridContainer"),logo=$("logoTriggui");
-  grid.innerHTML="",libroActual=libros[Math.floor(Math.random()*libros.length)],bloquePortada=Math.floor(Math.random()*4),revelado=false,logo.classList.remove("hidden");
-  libroActual.palabras.forEach((palabra,i)=>{
-    const div=document.createElement("div");
-    div.className=`block bg${i+1}`,div.id="bloque"+i;
-    div.innerHTML=`<div class="block-content label">${palabra}</div><div class="block-content accionable hidden" id="bloque${i}Text">${libroActual.frases[i]}</div>`;
-    div.onclick=()=>manejarClick(i);
+// Cargar JSON desde triggui-content
+fetch("https://raw.githubusercontent.com/TU_USUARIO/triggui-content/main/contenido.json")
+  .then(res => res.json())
+  .then(data => {
+    const libros = data.libros;
+    count = data.contador || 0;
+    const libro = libros[Math.floor(Math.random() * libros.length)];
+    libroActual = libro;
+    bloquePortada = Math.floor(Math.random() * 4);
+    iniciarUI(libro);
+  });
+
+function iniciarUI(libro) {
+  const grid = $("gridContainer");
+  const logo = $("logoTriggui");
+  grid.innerHTML = "";
+  logo.classList.remove("hidden");
+
+  libro.palabras.forEach((palabra, i) => {
+    const div = document.createElement("div");
+    div.className = "block";
+    div.id = "bloque" + i;
+    div.style.background = libro.colores[i] || "#555";
+
+    div.innerHTML = `
+      <div class="block-content label">${palabra}</div>
+      <div class="block-content accionable hidden" id="bloque${i}Text">${libro.frases[i]}</div>
+    `;
+    div.onclick = () => manejarClick(i);
     grid.appendChild(div);
   });
 }
 
-function manejarClick(i){
-  if(revelado)return location.reload();
-  if(i===bloquePortada)revelarTodo();
-  else $("bloque"+i+"Text").classList.remove("hidden"),$("bloque"+i).querySelector(".label").classList.add("hidden");
+function manejarClick(i) {
+  if (revelado) return location.reload();
+  if (i === bloquePortada) revelarTodo();
+  else {
+    $("bloque" + i + "Text").classList.remove("hidden");
+    $("bloque" + i).querySelector(".label").classList.add("hidden");
+  }
 }
 
-function revelarTodo(){
-  libroActual.palabras.forEach((_,i)=>{
-    const block=$("bloque"+i);
-    if(i===bloquePortada){
-      block.innerHTML="";
-      const wrapper=document.createElement("div"),img=document.createElement("img");
-      wrapper.className="portada-wrapper",img.src=libroActual.portada,img.alt="Portada",wrapper.appendChild(img),block.appendChild(wrapper);
-      block.style.background="none";block.style.padding="0";
-    }else $("bloque"+i+"Text").classList.remove("hidden"),block.querySelector(".label").classList.add("hidden");
+function revelarTodo() {
+  libroActual.palabras.forEach((_, i) => {
+    const block = $("bloque" + i);
+    if (i === bloquePortada) {
+      block.innerHTML = "";
+      const wrapper = document.createElement("div");
+      const img = document.createElement("img");
+      wrapper.className = "portada-wrapper";
+      img.src = libroActual.portada;
+      img.alt = "Portada";
+      wrapper.appendChild(img);
+      block.appendChild(wrapper);
+      block.style.background = "none";
+      block.style.padding = "0";
+    } else {
+      $("bloque" + i + "Text").classList.remove("hidden");
+      block.querySelector(".label").classList.add("hidden");
+    }
   });
-  document.body.classList.add("dark"),document.body.style.background=libroActual.fondo;
+  document.body.classList.add("dark");
+  document.body.style.background = libroActual.fondo;
   $("shockBtn").classList.remove("hidden");
   $("logoTriggui").classList.add("hidden");
-  revelado=true;
+  revelado = true;
 }
 
-$("shockBtn").onclick=()=>{
+$("shockBtn").onclick = () => {
   $("shockBtn").classList.add("hidden");
   $("mensajeFinal").classList.remove("hidden");
   $("contador").classList.remove("hidden");
-  $("contador").innerText=`📚 ${++count} lectores reales abrieron un libro`;
+  count++;
+  $("contador").innerText = `📚 ${count.toLocaleString('es-MX')} lectores reales abrieron un libro`;
 };
-
-window.onload=iniciarJuego;
 </script>
 </body>
 </html>
