--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,7 @@ body.dark{background:#000}
 .portada-wrapper img:hover{transform:scale(1.06) rotateY(6deg) rotateX(3deg)}
 .footer{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:1vh;min-height:110px}
 .shock{background:linear-gradient(135deg,#ff0080,#ff8c00,#00f2fe);color:#fff;font-weight:bold;border:none;border-radius:30px;padding:14px 24px;margin-top:8px;font-size:clamp(1rem,2vw,1.4rem);cursor:pointer;box-shadow:0 0 18px rgba(255,105,180,.6);animation:pulse 2s infinite;max-width:90%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-.counter{font-size:clamp(0.9rem,1.5vw,1.2rem);color:#fff;opacity:0.8;margin-top:5px}
-.final-message{color:#fff;font-size:clamp(1.1rem,2vw,1.5rem);text-align:center;opacity:0;animation:fadeIn 2s forwards;margin-top:8px;font-family:'Poppins',sans-serif}
+.counter{font-size:clamp(1.1rem,1.8vw,1.4rem);color:#fff;opacity:1;margin-top:12px;font-family:'Poppins',sans-serif;font-weight:600;text-align:center;animation:fadeIn 0.8s ease forwards}
 .trigguiletras{height:24px;opacity:.9;margin-top:6px;transition:opacity .4s}
 .hidden{display:none!important}
 @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
@@ -40,7 +39,6 @@ body.dark{background:#000}
   <div class="footer">
     <button class="shock hidden" id="shockBtn">📖 ¡Chócalas si abriste un libro físico!</button>
     <div class="counter hidden" id="contador"></div>
-    <div class="final-message hidden" id="mensajeFinal">📚 Cada página que sostienes abre un nuevo mundo real. ✨</div>
     <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
   </div>
 </div>
@@ -116,15 +114,14 @@ function revelarTodo() {
 
 $("shockBtn").onclick = async () => {
   $("shockBtn").classList.add("hidden");
-  $("mensajeFinal").classList.remove("hidden");
   $("contador").classList.remove("hidden");
 
   try {
     const res = await fetch("https://triggui-api.vercel.app/api/increment");
     const data = await res.json();
-    $("contador").innerText = `📚 ${data.total.toLocaleString('es-MX')} lectores reales abrieron un libro`;
+    $("contador").innerText = `📚 Ya hemos abierto ${data.total.toLocaleString('es-MX')} libros físicos`;
   } catch (e) {
-    $("contador").innerText = "📚 Error al contar";
+    $("contador").innerText = "📚 ¡Error al contar libros!";
   }
 };
 </script>
