--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@ body.dark{background:#000}
 .portada-wrapper img:hover{transform:scale(1.06) rotateY(6deg) rotateX(3deg)}
 .footer{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:1vh;min-height:110px}
 .shock{background:linear-gradient(135deg,#ff0080,#ff8c00,#00f2fe);color:#fff;font-weight:bold;border:none;border-radius:30px;padding:14px 24px;margin-top:8px;font-size:clamp(1rem,2vw,1.4rem);cursor:pointer;box-shadow:0 0 18px rgba(255,105,180,.6);animation:pulse 2s infinite;max-width:90%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-.counter{font-size:clamp(1.1rem,2vw,1.6rem);color:#fff;opacity:1;margin-top:12px;font-family:'Poppins',sans-serif;font-weight:500;text-align:center;animation:fadeIn 1s ease forwards}
-.resaltado{font-size:1.6em;color:#ffcc00;font-weight:700}
+.counter{font-size:clamp(1rem,1.4vw,1.2rem);color:#fff;margin-top:8px;font-family:'Poppins',sans-serif;text-align:center;white-space:nowrap}
+.resaltado{font-size:1.2em;color:#ffcc00;font-weight:700}
 .trigguiletras{height:24px;opacity:.9;margin-top:6px;transition:opacity .4s}
 .hidden{display:none!important}
 @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
@@ -102,7 +102,7 @@ function revelarTodo() {
       block.style.background = "none";
       block.style.padding = "0";
     } else {
-      $("bloque" + i + "Text").classList.remove("hidden");
+      $("bloque${i}Text").classList.remove("hidden");
       block.querySelector(".label").classList.add("hidden");
     }
   });
@@ -116,7 +116,6 @@ function revelarTodo() {
 $("shockBtn").onclick = async () => {
   $("shockBtn").classList.add("hidden");
   $("contador").classList.remove("hidden");
-
   try {
     const res = await fetch("https://triggui-api.vercel.app/api/increment");
     const data = await res.json();
