--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@ body.dark{background:#000}
 .header-message{font-size:clamp(1rem,1.5vw,1.3rem);color:#fff;opacity:0.8;padding:1vh;text-align:center}
 .grid{flex:1;display:grid;gap:1vw;padding:1vw;grid-template:1fr 1fr/1fr 1fr}
 @media(orientation:landscape){.grid{grid-template:1fr/1fr 1fr 1fr 1fr}}
-.block{display:flex;justify-content:center;align-items:center;text-align:center;border-radius:20px;font-weight:bold;font-size:clamp(1.2rem,2vw,1.5rem);color:#fff;background-size:cover;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;position:relative;padding:10px}
+.block{display:flex;justify-content:center;align-items:center;text-align:center;border-radius:20px;font-weight:bold;font-size:clamp(1.2rem,2vw,1.5rem);color:#fff;background-size:200% 200%;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;position:relative;padding:10px;box-shadow:0 0 18px rgba(0,0,0,0.4)}
 .block-content{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;padding:10px;text-align:center;word-break:break-word}
 .label{z-index:1}
 .accionable{color:#fff;font-family:'Poppins',sans-serif;font-size:clamp(1rem,1.8vw,1.4rem);font-weight:600;padding:14px;border-radius:18px;opacity:0;animation:aparecer .6s forwards;text-align:center;box-shadow:0 8px 30px rgba(0,0,0,.3)}
-.portada-wrapper{width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:transparent;transform-style:preserve-3d;animation:flotarRespirarTilt 8s ease-in-out infinite}
+.portada-wrapper{width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:radial-gradient(circle,#ffffff10,#00000000);animation:glowPortal 6s ease-in-out infinite}
 .portada-wrapper img{width:88%;height:auto;object-fit:cover;border-radius:22px;box-shadow:0 12px 30px rgba(0,0,0,.4);transition:transform .6s}
 .portada-wrapper img:hover{transform:scale(1.06) rotateY(6deg) rotateX(3deg)}
 .footer{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:1vh;min-height:110px}
@@ -26,12 +26,13 @@ body.dark{background:#000}
 .resaltado{font-size:1.2em;color:#ffcc00;font-weight:700}
 .trigguiletras{height:24px;opacity:.9;margin-top:6px;transition:opacity .4s}
 .hidden{display:none!important}
+.frase-magica{font-size:1.2rem;color:#ffeb3b;text-align:center;margin-top:1rem;font-family:'Poppins',sans-serif;animation:fadeIn 1.4s ease}
 @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
 @keyframes fadeInInstant{to{opacity:1}}
 @keyframes scaleFadeIn{to{transform:scale(1);opacity:1}}
 @keyframes aparecer{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
-@keyframes flotarRespirarTilt{0%,50%,100%{transform:translateY(0) rotateX(0) rotateY(0) scale(1)}25%{transform:translateY(-6px) rotateX(2deg) rotateY(-2deg) scale(1.015)}75%{transform:translateY(-6px) rotateX(-2deg) rotateY(2deg) scale(1.015)}}
 @keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.08)}}
+@keyframes glowPortal{0%{background:radial-gradient(circle,#ffffff05,#00000000)}50%{background:radial-gradient(circle,#ffffff15,#00000000)}100%{background:radial-gradient(circle,#ffffff05,#00000000)}}
 </style>
 </head>
 <body>
@@ -39,39 +40,48 @@ body.dark{background:#000}
   <div class="header-message">¿Dónde está el libro físico? 📚</div>
   <div class="grid" id="gridContainer"></div>
   <div class="footer">
+    <div class="frase-magica hidden" id="fraseMagica">✨ Este libro te eligió a ti. No es coincidencia.</div>
     <button class="shock hidden" id="shockBtn">📖 ¡Chócalas si abriste un libro físico!</button>
     <div class="counter hidden" id="contador">✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨</div>
     <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
   </div>
 </div>
-
 <script>
 const $ = id => document.getElementById(id);
 let libroActual, bloquePortada, revelado = false;
+const emojis = ["🌊","🛡️","🧠","📈","📘","🔮","❤️","✨","🪞"];
 
 fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
   .then(res => res.json())
   .then(data => {
-    const libros = data.libros;
-    const libro = libros[Math.floor(Math.random() * libros.length)];
+    const libro = data.libros[Math.floor(Math.random()*data.libros.length)];
     libroActual = libro;
-    bloquePortada = Math.floor(Math.random() * 4);
+    bloquePortada = Math.floor(Math.random()*4);
     iniciarUI(libro);
   });
+
+function generarGradiente(color) {
+  const h = parseInt(color.slice(1, 3), 16);
+  const l = parseInt(color.slice(3, 5), 16);
+  const s = parseInt(color.slice(5, 7), 16);
+  const light = `rgba(${h+30},${l+30},${s+30},0.8)`;
+  return `linear-gradient(135deg, ${color}, ${light})`;
+}
 
 function iniciarUI(libro) {
   const grid = $("gridContainer");
   const logo = $("logoTriggui");
   grid.innerHTML = "";
   logo.classList.remove("hidden");
-
   libro.palabras.forEach((palabra, i) => {
     const div = document.createElement("div");
     div.className = "block";
     div.id = `bloque${i}`;
-    div.style.background = libro.colores[i] || "#555";
+    const baseColor = libro.colores[i] || "#555";
+    div.style.background = generarGradiente(baseColor);
+    const emoji = emojis[i % emojis.length];
     div.innerHTML = `
-      <div class="block-content label">${palabra}</div>
+      <div class="block-content label">${emoji} ${palabra}</div>
       <div class="block-content accionable hidden" id="bloque${i}Text">${libro.frases[i]}</div>
     `;
     div.onclick = () => manejarClick(i);
@@ -109,20 +119,23 @@ function revelarTodo() {
   });
   document.body.classList.add("dark");
   document.body.style.background = libroActual.fondo;
-  $("shockBtn").classList.remove("hidden");
   $("logoTriggui").classList.add("hidden");
+  $("fraseMagica").classList.remove("hidden");
+  setTimeout(() => {
+    $("fraseMagica").classList.add("hidden");
+    $("shockBtn").classList.remove("hidden");
+  }, 2500);
   revelado = true;
 }
 
 $("shockBtn").onclick = async () => {
   $("shockBtn").classList.add("hidden");
   $("contador").classList.remove("hidden");
-
   try {
     const res = await fetch("https://triggui-api.vercel.app/api/increment");
     const data = await res.json();
     $("contador").innerHTML = `✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString('es-MX')}</span> libros físicos ✨`;
-  } catch (e) {
+  } catch {
     $("contador").innerText = "📚 ¡Error al contar libros!";
   }
 };
