--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@ body.dark{background:#000}
 </head>
 <body>
 <div class="main">
-  <div class="header-message">¿Dónde está el libro físico? 📚</div>
+  <div class="header-message">¿Dónde está el libro? 📚</div>
   <div class="grid" id="gridContainer"></div>
   <div class="footer">
     <div class="frase-magica hidden" id="fraseMagica">✨ Este libro te eligió a ti. No es coincidencia.</div>
