--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 <title>TrigguiApp – Un instante, un universo</title>
-<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 html,body{width:100%;height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);overflow:hidden;transition:background 1s ease;perspective:1200px}
 body.dark{background:#000}
-.main{height:100dvh;display:flex;flex-direction:column;opacity:0;animation:fadeIn 1.5s ease forwards}
+.main{width:100vw;height:100vh;display:flex;flex-direction:column;opacity:0;animation:fadeIn 1.5s ease forwards}
 .header-message{text-align:center;padding:2vh 1vw}
 .header-gradient{font-weight:800;font-size:clamp(1.4rem,3vw,2.2rem);background:linear-gradient(to right,#ff8a00,#e52e71,#9b00ff,#00c6ff);-webkit-background-clip:text;-webkit-text-fill-color:transparent;white-space:nowrap}
-.grid{flex:1.2;display:grid;gap:1vw;padding:1vw;grid-template:1fr 1fr/1fr 1fr}
+.grid{display:grid;gap:1vw;padding:1vw;grid-template:1fr 1fr/1fr 1fr;flex-shrink:0}
 @media(orientation:landscape){.grid{grid-template:1fr/1fr 1fr 1fr 1fr}}
 .block{display:flex;justify-content:center;align-items:center;text-align:center;border-radius:20px;font-weight:bold;font-size:clamp(1.2rem,2vw,1.5rem);color:#fff;background-size:200% 200%;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;position:relative;padding:10px;box-shadow:0 0 18px rgba(0,0,0,0.4)}
 .block-content{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;padding:10px;text-align:center;word-break:break-word}
@@ -21,11 +21,11 @@ body.dark{background:#000}
 .portada-wrapper{width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:radial-gradient(circle,#ffffff10,#00000000);animation:glowPortal 6s ease-in-out infinite}
 .portada-wrapper img{width:88%;height:auto;object-fit:cover;border-radius:22px;box-shadow:0 12px 30px rgba(0,0,0,.4);transition:transform .6s}
 .portada-wrapper img:hover{transform:scale(1.06) rotateY(6deg) rotateX(3deg)}
-.footer{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:2vh 1vw;min-height:120px}
+.footer{position:relative;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:1vh 1vw;flex-shrink:0}
 .shock{background:linear-gradient(135deg,#ff0080,#ff8c00,#00f2fe);color:#fff;font-weight:bold;border:none;border-radius:30px;padding:14px 24px;margin-top:8px;font-size:clamp(1rem,2vw,1.4rem);cursor:pointer;box-shadow:0 0 18px rgba(255,105,180,.6);animation:pulse 2s infinite;max-width:90%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
 .counter{font-size:clamp(1rem,1.4vw,1.2rem);color:#fff;margin-top:8px;font-family:'Poppins',sans-serif;text-align:center;white-space:nowrap;opacity:0;animation:fadeInInstant .3s forwards}
 .resaltado{font-size:1.2em;color:#ffcc00;font-weight:700}
-.trigguiletras{height:24px;opacity:.9;margin-top:3vh;transition:opacity .4s}
+.trigguiletras{position:absolute;bottom:2vh;height:24px;opacity:.9;transition:opacity .4s}
 .hidden{display:none!important}
 .frase-magica{font-size:1.2rem;color:#ffeb3b;text-align:center;margin-top:1rem;font-family:'Poppins',sans-serif;animation:fadeIn 1.4s ease}
 @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
@@ -54,6 +54,17 @@ const $ = id => document.getElementById(id);
 let libroActual, bloquePortada, revelado = false;
 const emojis = ["🌊","🛡️","🧠","📈","📘","🔮","❤️","✨","🪞"];
 
+function ajustarAlturas() {
+  const total = window.innerHeight;
+  const header = document.querySelector(".header-message").offsetHeight;
+  const footer = document.querySelector(".footer").offsetHeight;
+  const grid = document.getElementById("gridContainer");
+  const restante = total - header - footer;
+  grid.style.height = `${restante}px`;
+}
+
+window.addEventListener("resize", ajustarAlturas);
+
 fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
   .then(res => res.json())
   .then(data => {
@@ -61,6 +72,7 @@ fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/conteni
     libroActual = libro;
     bloquePortada = Math.floor(Math.random()*4);
     iniciarUI(libro);
+    ajustarAlturas();
   });
 
 function generarGradiente(color) {
