--- a/public/index.html
+++ b/public/index.html
@@ -9,30 +9,30 @@
 *{margin:0;padding:0;box-sizing:border-box}
 html,body{width:100%;height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);overflow:hidden}
 body.dark{background:#000}
-.main{height:100dvh;display:flex;flex-direction:column;justify-content:space-between;opacity:0;animation:fadeIn 1.5s ease forwards}
-.header-message{text-align:center;padding:2vh 1vw}
-.header-gradient{font-weight:800;font-size:clamp(1.4rem,2.5vw,2.2rem);background:linear-gradient(to right,#ff8a00,#e52e71,#9b00ff,#00c6ff);-webkit-background-clip:text;-webkit-text-fill-color:transparent;white-space:nowrap}
+.main{display:flex;flex-direction:column;justify-content:space-between;height:100dvh;opacity:0;animation:fadeIn 1.5s ease forwards}
+.header-message{text-align:center;padding:1vh 1vw}
+.header-gradient{font-weight:800;font-size:clamp(1.3rem,2.4vw,2rem);background:linear-gradient(to right,#ff8a00,#e52e71,#9b00ff,#00c6ff);-webkit-background-clip:text;-webkit-text-fill-color:transparent;white-space:nowrap}
 .grid{flex:1;display:grid;gap:1vw;padding:1vw;grid-template:1fr 1fr/1fr 1fr}
 @media(orientation:landscape){.grid{grid-template:1fr/1fr 1fr 1fr 1fr}}
-.block{position:relative;display:flex;justify-content:center;align-items:center;text-align:center;border-radius:20px;font-weight:bold;font-size:clamp(1.2rem,2vw,1.5rem);color:#fff;background-size:200% 200%;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;padding:10px;height:100%}
-.block-content{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;padding:10px;text-align:center}
+.block{position:relative;display:flex;justify-content:center;align-items:center;text-align:center;border-radius:18px;font-weight:bold;font-size:clamp(1rem,1.9vw,1.3rem);color:#fff;background-size:200% 200%;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;padding:6px;min-height:0;max-height:100%}
+.block-content{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;padding:6px;text-align:center;max-height:100%}
 .label{z-index:1}
-.accionable{color:#fff;font-family:'Poppins',sans-serif;font-size:clamp(1rem,1.8vw,1.4rem);font-weight:600;padding:14px;border-radius:18px;opacity:0;animation:aparecer .6s forwards;text-align:center;box-shadow:0 8px 30px rgba(0,0,0,.3)}
+.accionable{color:#fff;font-family:'Poppins',sans-serif;font-size:clamp(.9rem,1.5vw,1.2rem);font-weight:600;padding:10px;border-radius:14px;opacity:0;animation:aparecer .6s forwards;text-align:center;box-shadow:0 6px 20px rgba(0,0,0,.3)}
 .portada-wrapper{width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:radial-gradient(circle,#ffffff10,#0000);animation:glow 6s ease-in-out infinite}
-.portada-wrapper img{width:88%;height:auto;object-fit:cover;border-radius:22px;box-shadow:0 12px 30px rgba(0,0,0,.4);transition:transform .6s}
-.portada-wrapper img:hover{transform:scale(1.06) rotateY(6deg) rotateX(3deg)}
-.footer{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:1vh 1vw}
-.shock{background:linear-gradient(135deg,#ff0080,#ff8c00,#00f2fe);color:#fff;font-weight:bold;border:none;border-radius:30px;padding:14px 24px;margin-top:4px;font-size:clamp(1rem,2vw,1.4rem);cursor:pointer;box-shadow:0 0 18px rgba(255,105,180,.6);animation:pulse 2s infinite;max-width:90%}
-.counter{font-size:clamp(1rem,1.4vw,1.2rem);color:#fff;margin-top:6px;font-family:'Poppins',sans-serif;text-align:center;white-space:nowrap;opacity:0;animation:fadeInInstant .3s forwards}
-.resaltado{font-size:1.2em;color:#ffcc00;font-weight:700}
-.trigguiletras{height:24px;opacity:.9;margin-top:2vh}
+.portada-wrapper img{width:80%;max-height:90%;object-fit:contain;border-radius:20px;box-shadow:0 10px 24px rgba(0,0,0,.4);transition:transform .5s}
+.portada-wrapper img:hover{transform:scale(1.03) rotateY(4deg) rotateX(2deg)}
+.footer{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:1vh 2vw;min-height:110px}
+.shock{background:linear-gradient(135deg,#ff0080,#ff8c00,#00f2fe);color:#fff;font-weight:bold;border:none;border-radius:28px;padding:10px 20px;margin-top:6px;font-size:clamp(.9rem,1.8vw,1.2rem);cursor:pointer;box-shadow:0 0 12px rgba(255,105,180,.5);animation:pulse 2s infinite;max-width:95%}
+.counter{font-size:clamp(.9rem,1.2vw,1.1rem);color:#fff;margin-top:4px;font-family:'Poppins',sans-serif;text-align:center;white-space:nowrap;opacity:0;animation:fadeInInstant .3s forwards}
+.resaltado{font-size:1.1em;color:#ffcc00;font-weight:700}
+.trigguiletras{height:20px;opacity:.9;margin-top:1vh}
 .hidden{display:none!important}
-.frase-magica{font-size:1.2rem;color:#ffeb3b;text-align:center;margin-top:1rem;font-family:'Poppins',sans-serif;animation:fadeIn 1.4s ease}
+.frase-magica{font-size:1rem;color:#ffeb3b;text-align:center;margin-top:1rem;font-family:'Poppins',sans-serif;animation:fadeIn 1.4s ease}
 @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
 @keyframes fadeInInstant{to{opacity:1}}
 @keyframes scaleFadeIn{to{transform:scale(1);opacity:1}}
 @keyframes aparecer{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
-@keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.08)}}
+@keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.06)}}
 @keyframes glow{0%{background:radial-gradient(circle,#ffffff05,#0000)}50%{background:radial-gradient(circle,#ffffff15,#0000)}100%{background:radial-gradient(circle,#ffffff05,#0000)}}
 </style>
 </head>
@@ -69,9 +69,8 @@ function generarGradiente(color) {
 
 function iniciarUI(libro) {
   const grid = $("gridContainer");
-  const logo = $("logoTriggui");
+  $("logoTriggui").classList.remove("hidden");
   grid.innerHTML = "";
-  logo.classList.remove("hidden");
   libro.palabras.forEach((palabra, i) => {
     const div = document.createElement("div");
     div.className = "block";
