--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,21 @@
 html,body{width:100%;height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);overflow:hidden}
 body.dark{background:#000}
 .main{display:flex;flex-direction:column;justify-content:space-between;height:100dvh;opacity:0;animation:fadeIn 1.5s ease forwards}
-.header-message{text-align:center;padding:1vh 1vw}
+.header-message{text-align:center;padding:1vh 1vw;margin-top:1.5vh}
 .header-gradient{font-weight:800;font-size:clamp(1.3rem,2.4vw,2rem);background:linear-gradient(to right,#ff8a00,#e52e71,#9b00ff,#00c6ff);-webkit-background-clip:text;-webkit-text-fill-color:transparent;white-space:nowrap}
 .grid{flex:1;display:grid;gap:1vw;padding:1vw;grid-template:1fr 1fr/1fr 1fr}
-@media(orientation:landscape){.grid{grid-template:1fr/1fr 1fr 1fr 1fr}}
-.block{position:relative;display:flex;justify-content:center;align-items:center;text-align:center;border-radius:18px;font-weight:bold;font-size:clamp(1rem,1.9vw,1.3rem);color:#fff;background-size:200% 200%;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;padding:6px;min-height:0;max-height:100%}
+@media(orientation:landscape){
+  .grid{grid-template:1fr/1fr 1fr 1fr 1fr}
+  .block{max-height:45vh}
+}
+.block{position:relative;display:flex;justify-content:center;align-items:center;text-align:center;border-radius:18px;font-weight:bold;font-size:clamp(1rem,1.9vw,1.3rem);color:#fff;background-size:200% 200%;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;padding:6px;height:100%}
 .block-content{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;padding:6px;text-align:center;max-height:100%}
 .label{z-index:1}
 .accionable{color:#fff;font-family:'Poppins',sans-serif;font-size:clamp(.9rem,1.5vw,1.2rem);font-weight:600;padding:10px;border-radius:14px;opacity:0;animation:aparecer .6s forwards;text-align:center;box-shadow:0 6px 20px rgba(0,0,0,.3)}
 .portada-wrapper{width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:radial-gradient(circle,#ffffff10,#0000);animation:glow 6s ease-in-out infinite}
 .portada-wrapper img{width:80%;max-height:90%;object-fit:contain;border-radius:20px;box-shadow:0 10px 24px rgba(0,0,0,.4);transition:transform .5s}
 .portada-wrapper img:hover{transform:scale(1.03) rotateY(4deg) rotateX(2deg)}
-.footer{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:1vh 2vw;min-height:110px}
+.footer{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:1vh 2vw;min-height:120px}
 .shock{background:linear-gradient(135deg,#ff0080,#ff8c00,#00f2fe);color:#fff;font-weight:bold;border:none;border-radius:28px;padding:10px 20px;margin-top:6px;font-size:clamp(.9rem,1.8vw,1.2rem);cursor:pointer;box-shadow:0 0 12px rgba(255,105,180,.5);animation:pulse 2s infinite;max-width:95%}
 .counter{font-size:clamp(.9rem,1.2vw,1.1rem);color:#fff;margin-top:4px;font-family:'Poppins',sans-serif;text-align:center;white-space:nowrap;opacity:0;animation:fadeInInstant .3s forwards}
 .resaltado{font-size:1.1em;color:#ffcc00;font-weight:700}
