--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@ body.dark { background:#000; }
 .grid {
   flex:1;
   display:grid;
-  gap:2vw;
+  gap:1.5vw;
   padding:0 2vw;
   grid-template-columns:1fr 1fr;
   grid-template-rows:1fr 1fr;
@@ -107,7 +107,7 @@ body.dark { background:#000; }
   height:var(--footer-height);
   display:flex; flex-direction:column;
   align-items:center; justify-content:flex-start;
-  padding:1vh 2vw;
+  padding:3vh 2vw 2vh;
 }
 .shock {
   background:linear-gradient(135deg,#ff0080,#ff8c00,#00f2fe);
@@ -141,7 +141,7 @@ body.dark { background:#000; }
 .trigguiletras {
   height:20px;
   opacity:.9;
-  margin-top:1vh;
+  margin-top:1.5vh;
 }
 .hidden { display:none!important; }
 .frase-magica {
